_2007_10_04__11_59_35_ Chi-Hsiu Liang

  * Updated "Mesmer FAQ.doc"
  * Updated source.ps
  * modified main.cpp so that the output filename is date stamped.
  * added TimeCounter.cpp
  * Modified TimeCounter.h
    Time stamp can now be applied to occasions where proper. Please check TimeCounter.h for usage.

_2007_10_03__11_06_49_ Chi-Hsiu Liang

  * Added the CXSC library source code folder
    Sorry, forgot to add CXSC library code for everyone. Please install it in your own computer, e.g. /usr/cxsc , etc..
    Usage (in UNIX/Linux/Mac?):
    Type the following command in command line mode under the directory of cxsc.
    ./install_cxsc
  * variable declarations in MesmerPrecision.h
  
_2007_10_03__10_42_44_ Chi-Hsiu Liang

  * Added selection of QD/DD/CXSC (CXSC not yet implemented/tested, but has linked)
  * Removed the error from the previous commit in Matrix.h
  * Added TimeCount header for time measuring and stamping
    TimeCount can be accessed through several functions listed in TimeCount.h to be used by anyone uses Mesmer.
    Examples are also listed.
  * Commented out some unused type definitions in matrix.h
  * Some other minor modifications
  
_2007_09_28__14_16_39_ Chi-Hsiu Liang

  * QD for double-double and quad-double precisions. 
  * Move normalization function into matrix.h
  * Completed writing of MesmerILT.cpp but not linked and tested.
  * Modified namings of variables:  ngrn -> MaximumGrain
  * Add README, MesmerPrecision.h
  * Mesmer FAQ file in documentation folder
  * Other minor modifications

_2007_09_25__10_31_44_ Chi-Hsiu Liang

  * Add a ToDo file
  * Add qd source into trunk directory
  * Precision definitions in MesmerConfig.h
  * More edits to MesmerILT.cpp
  * Modified namings of variables:  kfmc -> cellKfmc
                                    m_kfgrn -> m_GrainKfmc
                                    m_kfmc -> m_CellKfmc
                                    dosGrn -> grainDOS
                                    eGrn -> grainEne