@@ -343,7 +343,9 @@ namespace mesmer
         for ( j = 0 ; j < MaximumGrain ; ++j ){
 #if defined (USE_QD) || defined(USE_DD)  //GUARD_USE_QD_USE_DD
             columnSum += to_double((*m_egme)[j][i]) ;
-#else  //GUARD_USE_QD_USE_DD
+#elif defined (USE_CXSC)
+            columnSum += _double(_real((*m_egme)[j][i])) ;
+#else
             columnSum += (*m_egme)[j][i] ;
 #endif  //GUARD_USE_QD_USE_DD
         }
@@ -454,7 +456,9 @@ namespace mesmer
     for (int i = 0 ; i < ndim ; ++i){
 #if defined (USE_QD) || defined(USE_DD)  //GUARD_USE_QD_USE_DD
         sum +=  k[i]* to_double((*m_egme)[i][eigveci]*(*m_egme)[i][eigvecj]) ;
-#else  //GUARD_USE_QD_USE_DD
+#elif defined (USE_CXSC)
+        sum +=  k[i]* _double(_real((*m_egme)[i][eigveci]*(*m_egme)[i][eigvecj])) ;
+#else
         sum +=  k[i]* (*m_egme)[i][eigveci]*(*m_egme)[i][eigvecj] ;
 #endif  //GUARD_USE_QD_USE_DD
     }
