@@ -54,7 +54,7 @@ namespace mesmer
       if (TimeMap[i].stampName == timeStampName){
         tStamp = TimeMap[i].timeStamp;
         foundTimeStamp = true;
-        if (i != 0) timeElapsed = TimeMap[i].timeStamp - TimeMap[i-1].timeStamp;
+        if (i > 0) timeElapsed = TimeMap[i].timeStamp - TimeMap[i-1].timeStamp;
         else timeElapsed = 0;
         break;
       }
