@@ -1,3 +1,8 @@
+_2007_10_05__13_30_14_ Chi-Hsiu Liang
+
+  * Some CXSC flags
+    CXSC is considered too slow. So will be deleted afterward. This version is only a record for future reference.
+
 _2007_10_04__11_59_35_ Chi-Hsiu Liang
 
   * Updated "Mesmer FAQ.doc"
